Change to preview logic, do not migrate instances during migrate process if set.